--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<section class="pages-section" style="background-image: url('{{ asset('background.png') }}'); background-size: cover;">
+<section class="pages-section" style="background-image: url('{{ asset("background.png") }}'); background-size: cover;">
     <h1 class="titles-top fst-italic fw-bolder text-center">Nos actualités</h1>
     <div class="container-fluid pt-5 pb-5">
         <div class="row content">
