--- a/assets/styles/header.scss
+++ b/assets/styles/header.scss
@@ -88,7 +88,7 @@
         color: #b0b8bf!important;
 }
 
-#mobileKey {
+#mobile-key {
     display: none;
 }
 
@@ -135,11 +135,11 @@
         line-height: 100px;
     }
 
-    #desktopKey {
+    #desktop-key {
         display: none;
     }
 
-    #mobileKey {
+    #mobile-key {
         display: initial;
     }
  }
