--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -40,7 +40,7 @@
               <a class="nav-link text-white" href="/">Accueil</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="/notre-identite">Notre identitÃ©</a>
+              <a class="nav-link text-white" href="/notre-identite">Notre identité</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white" href="/prise-en-charge">Prise en charge - Tarification</a>
