--- a/templates/main/appointment.html.twig
+++ b/templates/main/appointment.html.twig
@@ -37,7 +37,7 @@
                 {{ form_start(formulaire) }}
 
                 <div class="identity">
-                    <h2 class="text-center sub-titles"> Informations Personnelles </h2>
+                    <h2 class="text-center"> Informations Personnelles </h2>
                     {# Champs du formulaire pour les informations personnelles #}
                     <div class="row">
                         <div class="col-lg-2 pe-3">{{ form_row(formulaire.Civilite) }}</div>
