--- a/templates/main/aboutUs.html.twig
+++ b/templates/main/aboutUs.html.twig
@@ -38,8 +38,12 @@
             </div>
         </div>
     </div>
+
+    {# initialise une variable counter à 0. Ce compteur sera utilisé pour suivre le nombre d'itérations dans la boucle et déterminer si l'élément actuel doit être affiché à gauche ou à droite. #}
     {% set counter = 0 %}
     {% for posts in post %}
+
+        {# vérifie si la valeur de counter est divisible par 2. Si c'est le cas, cela signifie que nous sommes en train d'itérer sur un élément pair dans la liste. Le contenu à l'intérieur de cette condition sera affiché du côté gauche. #}
         {% if counter is divisible by(2) %}
             <div class="container-fluid pt-5 pb-5">
                 <div class="row content">
@@ -66,6 +70,7 @@
             </div>
         {% endif %}
 
+        {# À la fin de chaque itération de la boucle, le compteur est incrémenté de 1 pour passer à l'élément suivant. #}
         {% set counter = counter + 1 %}
     {% endfor %}
 </section>
