--- a/templates/bundles/TwigBundle/Exception/error403.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error403.html.twig
@@ -2,6 +2,6 @@
 
 {% block body %}
 
-<h1 class="error-title text-center m-5 p-5">Oops , une erreur est survenue !</h1>
+<h1 class="error-title text-center m-5 p-5">Oups , une erreur est survenue !</h1>
 
 {% endblock %}
