--- a/templates/bundles/TwigBundle/Exception/error404.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error404.html.twig
@@ -2,6 +2,6 @@
 
 {% block body %}
 
-<h1 class="error-title text-center m-5 p-5">Oops , la page que vous chercher est introuvable !</h1>
+<h1 class="error-title text-center m-5 p-5">Oups , la page que vous cherchez est introuvable !</h1>
 
 {% endblock %}
