--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -26,15 +26,15 @@
                     <div id="buttons-container" class="d-flex row fade-in-left">
 
                         <button type="button" class="btn bg-primary text-decoration-none">
-                            <a class="text-white text-decoration-none d-flex align-items-center justify-content-center" href="/contact">Contactez Nous</a>
+                            <a class="text-white text-decoration-none d-flex align-items-center justify-content-center" href="/contact">Contactez-nous</a>
                         </button>
 
                         <button type="button" class="btn bg-primary d-flex align-items-center justify-content-center text-decoration-none">
-                            <a class="text-white text-decoration-none d-flex align-items-center justify-content-center" href="/vos-rendez-vous">Prenez Rendez-Vous</a>
+                            <a class="text-white text-decoration-none d-flex align-items-center justify-content-center" href="/vos-rendez-vous">Prenez rendez-vous</a>
                         </button>
 
                         <button type="button" class="btn bg-primary d-flex align-items-center justify-content-center text-decoration-none">
-                            <a class="text-white text-decoration-none d-flex align-items-center justify-content-center" href="/nous-rejoindre">Rejoignez Nous</a>
+                            <a class="text-white text-decoration-none d-flex align-items-center justify-content-center" href="/nous-rejoindre">Rejoignez-nous</a>
                         </button>
                         
                     </div>
