--- a/templates/main/appointment.html.twig
+++ b/templates/main/appointment.html.twig
@@ -65,12 +65,12 @@
                         <div class="col-lg-6 pe-3 ps-3">{{ form_row(formulaire.Motif) }}</div>
                         <div class="col-lg-6 pe-3 ps-3">{{ form_row(formulaire.TypeEtablissement) }}</div>
                         <div class="col-lg-6 pe-3 ps-3 text-center">
-                            <h3 class="pt-4">Veuillez choisir votre position de transport</h3>
+                            {# <h3 class="pt-4">Veuillez choisir votre position de transport</h3> #}
                             {{ form_label(formulaire.ModeTransport) }}
                             {{ form_widget(formulaire.ModeTransport) }}
                         </div>
                         <div class="col-lg-6 pe-3 ps-3 text-center">
-                            <h3 class="pt-4">Veuillez choisir entre aller simple et aller retour</h3>
+                            {# <h3 class="pt-4">Veuillez choisir entre aller simple et aller retour</h3> #}
                             {{ form_label(formulaire.Aller) }}
                             {{ form_widget(formulaire.Aller) }}
                         </div>
