--- a/templates/main/contact.html.twig
+++ b/templates/main/contact.html.twig
@@ -6,7 +6,7 @@
         <div class="row content text-center">
             <div class="col-12 ">
                 <a href="tel:+33385590487" class="nav-link p-0 text-body-secondary mt-2 d-inline-block ps-5 pe-5">Tél : 03 85 59 04 87</a>
-                <a href="tel:+33677658774" class="nav-link p-0 text-body-secondary mt-2 d-inline-block ps-5 pe-5">Tél : 06 77 65 87 74</a><br>
+                <a href="tel:+33677658774" class="nav-link p-0 text-body-secondary mt-2 d-inline-block ps-5 pe-5">Tél : 06 77 6587 74</a><br>
                 <a href="geo:0,0?q=7+Avn.Pierre+le+Vénérable,71250+Cluny" class="nav-link p-0 text-body-secondary mt-3 d-inline-block">7 Av. Pierre le Vénérable, 71250 Cluny</a>
             </div>
             <div class="col-lg-6 mt-5 sub-content text-center">
