--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -32,10 +32,10 @@
               <a class="nav-link text-white" href="/prise-en-charge">Prise en charge - Tarification</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="/nous-rejoindre">Offres d'emploi - Nous rejoindre</a>
+              <a class="nav-link text-white" href="/vos-rendez-vous">Vos rendez-vous</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="/vos-rendez-vous">Vos rendez-vous</a>
+              <a class="nav-link text-white" href="/rejoignez-nous">Rejoignez-nous</a>
             </li>
             <li class="nav-item pb-5">
               <a class="nav-link text-white" href="/contact">Contact</a>
