--- a/templates/main/appointment.html.twig
+++ b/templates/main/appointment.html.twig
@@ -29,7 +29,7 @@
 
                 {{ form_start(formulaire) }}
                 <div class="identity">
-                    <h2 class="text-center sub-titles"> Informations Personnelles </h2>
+                    <h2 class="text-center sub-titles"> Informations personnelles </h2>
                     <div class="row">
                         <div class="col-lg-2 pe-3">{{ form_row(formulaire.Civilite) }}</div>
                         <div class="col-lg-4 pe-3 ps-3">{{ form_row(formulaire.Nom) }}</div>
@@ -49,7 +49,7 @@
                 </div>
 
                 <div class="details mb-5 pt-5">
-                    <h2 class="text-center pb-3"> Détails du Rendez-Vous </h2>
+                    <h2 class="text-center pb-3"> Détails du rendez-vous </h2>
                     <div class="row">
                         <div class="col-lg-4 pe-3 ps-3 pb-2"><label class="fs-4">Date du rendez-vous *</label>{{ form_row(formulaire.DateRendezVous) }}</div>
                         <div class="col-lg-4 pe-3 ps-3"><label class="fs-4">Heure du rendez-vous *</label>{{ form_row(formulaire.HeureRendezVous) }}</div>
@@ -65,12 +65,12 @@
                         <div class="col-lg-6 pe-3 ps-3">{{ form_row(formulaire.Motif) }}</div>
                         <div class="col-lg-6 pe-3 ps-3">{{ form_row(formulaire.TypeEtablissement) }}</div>
                         <div class="col-lg-6 pe-3 ps-3 text-center">
-                            {# <h3 class="pt-4">Veuillez choisir votre position de transport</h3> #}
+
                             {{ form_label(formulaire.ModeTransport) }}
                             {{ form_widget(formulaire.ModeTransport) }}
                         </div>
                         <div class="col-lg-6 pe-3 ps-3 text-center">
-                            {# <h3 class="pt-4">Veuillez choisir entre aller simple et aller retour</h3> #}
+
                             {{ form_label(formulaire.Aller) }}
                             {{ form_widget(formulaire.Aller) }}
                         </div>
