--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -34,7 +34,7 @@
                         </button>
 
                         <button type="button" class="btn bg-primary d-flex align-items-center justify-content-center text-decoration-none">
-                            <a class="text-white text-decoration-none d-flex align-items-center justify-content-center" href="/nous-rejoindre">Rejoignez-nous</a>
+                            <a class="text-white text-decoration-none d-flex align-items-center justify-content-center" href="/rejoignez-nous">Rejoignez-nous</a>
                         </button>
                         
                     </div>
