--- a/templates/main/joinUs.html.twig
+++ b/templates/main/joinUs.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block body %}
 <section class="pages-section" style="background-image: url('{{ asset("croixGrey.png") }}');">
-    <h1 class="titles-top fst-italic fw-bolder text-center">Nous rejoindre</h1>
+    <h1 class="titles-top fst-italic fw-bolder text-center">Rejoignez-nous</h1>
 
 {# initialise une variable counter à 0. Ce compteur sera utilisé pour suivre le nombre d'itérations dans la boucle et déterminer si l'élément actuel doit être affiché à gauche ou à droite. #}
 {% set counter = 0 %}
