--- a/templates/main/aboutUs.html.twig
+++ b/templates/main/aboutUs.html.twig
@@ -15,25 +15,25 @@
                 <div class="col-lg-3 col-sm-12 ps-2 pe-2">
                     <i aria-hidden="true" class="fas fa-snowflake" id="about_i"></i>
                     <h4>Le confort et l’hygiène :</h4>
-                    <p>nos ambulances sont climatisées, issues de la dernière génération et désinfectées quotidiennement.</p>
+                    <p>Nos ambulances sont climatisées, issues de la dernière génération et désinfectées quotidiennement.</p>
                 </div>
 
                 <div class="col-lg-3 col-sm-12 ps-2 pe-2">
                     <i aria-hidden="true" class="fas fa-user-nurse" id="about_i"></i>
                     <h4>Le professionnalisme :</h4>
-                    <p>nos ambulanciers et chauffeur sont tous diplômés d’État et mettront leur savoir-faire à votre disposition.</p>
+                    <p>Nos ambulanciers et chauffeurs sont tous diplômés d’État et mettront leur savoir-faire à votre disposition.</p>
                 </div>
 
                 <div class="col-lg-3 col-sm-12 ps-2 pe-2">
                     <i aria-hidden="true" class="fas fa-shield-virus" id="about_i"></i>
                     <h4>La sécurité :</h4>
-                    <p>nos véhicules sont équipés d’oxygène ainsi que du matériel de premier secours et de réanimation dernier cri. De plus, nous disposons de bonne humeur à bord.</p>
+                    <p>Nos véhicules sont équipés d’oxygène ainsi que du matériel de premier secours et de réanimation dernier cri. De plus, nous disposons de bonne humeur à bord.</p>
                 </div>
 
                 <div class="col-lg-3 col-sm-12 ps-2 pe-2">
                     <i aria-hidden="true" class="fas fa-stopwatch" id="about_i"></i>
                     <h4>Une intervention 7j/7 et 24h/24 :</h4>
-                    <p>nos véhicules sont disponible tous les jours à n'importe quel moment.</p>
+                    <p>Nos véhicules sont disponible tous les jours à n'importe quel moment.</p>
                 </div>
             </div>
         </div>
