--- a/templates/main/contact.html.twig
+++ b/templates/main/contact.html.twig
@@ -7,7 +7,7 @@
             <div class="col-12 ">
                 <a href="tel:+33385590487" class="nav-link p-0 text-body-secondary mt-2 d-inline-block ps-5 pe-5">Tél : 03 85 59 04 87</a>
                 <a href="tel:+33677658774" class="nav-link p-0 text-body-secondary mt-2 d-inline-block ps-5 pe-5">Tél : 06 77 65 87 74</a><br>
-                <a href="geo:0,0?q=7+Avn.Pierre+le+Vénérable,71250+Cluny" class="nav-link p-0 text-body-secondary mt-3 d-inline-block">7 Av. Pierre le Vénérable, 71250 Cluny</a>
+                <a href="geo:0,0?q=7+Avn.Pierre+le+Vénérable,71250+Cluny" class="nav-link p-0 text-body-secondary mt-3 d-inline-block">7 av. Pierre le Vénérable, 71250 Cluny</a>
             </div>
             <div class="col-lg-6 mt-5 sub-content text-center">
                 <iframe class="rounded-5 mt-2" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2749.5379384110047!2d4.652024377010696!3d46.43803726793772!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f30aeb8182f371%3A0xbf3199329fef4a95!2sLA%20CLUNYSOISE%20AMBULANCES%20ET%20TAXIS!5e0!3m2!1sfr!2sfr!4v1689871120391!5m2!1sfr!2sfr" width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
