--- a/templates/main/joinUs.html.twig
+++ b/templates/main/joinUs.html.twig
@@ -62,7 +62,7 @@
                 
                 <div class="row form-group pt-3">
                     <div class="col-lg-12 pe-3 ps-3">
-                        <label>Téléchargez votre C.V ci-dessous</label>
+                        <label>Téléchargez votre CV ci-dessous</label>
                     {{ form_row(formulaire.Fichier) }}
                     </div>
                 </div>
